Some method name changes for parity and some general code improvements